# instadon

./: .env.example  .gitignore  615_import_firefox_session.py  README.md  deps.edn  pyproject.toml  requirements.txt
.clj-kondo/: config.edn
instadon/: __init__.py  config.py  core.py  instagram.py  main.py  mastodon.py  media.py  post_tracker.py  text_processor.py
src/instadon/: app.clj
src/python/: cli.py  config.py  instadon.py  instagram.py  mastodon.py  media.py  text_processor.py
tests/: test_core.py
